# CPU-Schedulers

./: CMakeLists.txt  README.md
GUI/: CPUSimulator.cpp  CPUSimulator.hpp  FCFSScheduler.cpp  Headers.hpp  MAINmainwindow.cpp  MAINmainwindow.h  MAINmainwindow.ui  OSproject.pro  OSproject.pro.user.ad7d434  PriorityPreemptiveScheduler.cpp  RoundRobinScheduler.cpp  RoundRobinScheduler.hpp  SJFNonPreemptiveScheduler.cpp  Scheduler.hpp  StatisticsCalculator.cpp  StatisticsCalculator.hpp  cpuscheduleros.cpp  cpuscheduleros.h  cpuscheduleros.ui  global.cpp  global.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rectangle.h  resource.qrc
GUI/gantChart/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Header Files/: FCFSScheduler.hpp  Headers.hpp  PriorityNonPreemptiveScheduler.hpp  PriorityPreemptiveScheduler.hpp  RoundRobinScheduler.hpp  SJFNonPreemptiveScheduler.hpp  SJFPreemptiveScheduler.hpp  Scheduler.hpp  StatisticsCalculator.hpp  process.hpp
Source Files/: FCFSScheduler.cpp  PriorityNonPreemptiveScheduler.cpp  RoundRobinScheduler.cpp  SJFPreemptiveScheduler.cpp  StatisticsCalculator.cpp  main.cpp
